<resources>
    <string name="appName">MAD Meditation</string>
    <string name="onboardingWelcomeTextHeader">Привет</string>
    <string name="onboardingWelcomeTextBody">Наслаждайся отборочными. \n Будь внимателен. \n Делай хорошо.</string>
    <string name="onboardingNoAccountHint">Еще нет аккаунта?</string>
    <string name="onboardingNoAccountHintRegistration">Зарегистрируйтесь</string>
    <string name="registrationTextMock">Тут будет \n регистрация</string>
    <string name="onboardingLoginAccount">Войти в аккаунт</string>
    <string name="loginEmailHint">Email</string>
    <string name="loginPasswordHint">Пароль</string>
    <string name="loginAccountLogin">Войти</string>
    <string name="alertDialogLoginFailedTitle">Ошибка входа</string>
    <string name="alertDialogDataIncorrectMessage">Поле email или парль не заполнено. Проверьте заполненность</string>
    <string name="alertDialogLoginFailedMessage">Введенные данные некорректны. Проверьте правильность</string>
    <string name="networkErrorMessage">Ошибка сети. Попробуйте еще раз</string>
    <string name="welcomeTextText">С возвращением, %1$s!</string>
    <string name="afterwelcomeTextFeelingQuestion">Каким ты себя ощущешь сегодня?</string>
    <string name="moreButtonText">подробнее</string>
    <string name="playerTextMock">Тут будет \n прослушивание</string>
    <string name="menuTextMock">Тут будет \n меню</string>
    <string name="exitTextText">выход</string>
    <string name="imageLoadingErrorMessage">Ошибка загрузки картинки</string>
    <string name="galleryDeleteText">удалить</string>
    <string name="galleryCloseText">закрыть</string>
    <string name="noInternalStorageAccess">Отсутствует доступ ко внутренней памяти</string>
    <string name="mainFragmentTitle">Main screen</string>
    <string name="playerFragmentTitle">Player screen</string>
    <string name="profileFragmentTitle">Profile screen</string>
</resources>